vsc